# stacnotator

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml
.github/workflows/: ci.yml  test-runner.yml
azure_deploy/: .env.deploy.example  README.md  configure-app-secrets.sh  deploy-app.sh  download-prod-db.sh  grant-admin.sh  make-staging-env.sh  restore-backup.sh  sync-prod-data-to-dev.sh  upload-secrets.sh  view-logs.sh
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  init_postgis.py  logging.ini  pyproject.toml  seed_dev_data.py
backend/alembic/: env.py
backend/alembic/versions/: 087ef48a2b45_create_annotation_tables.py  20c690e91954_add_default_main_window_id_to_imagery.py  41529171c6ee_adding_layouts_to_imagery_and_campaigns.py  454aa9123d3f_add_imagery_windowing_stac_columns.py  4cc0f1586e8a_optional_label_id_for_annotation_for_.py  6ab7e9e1fec0_added_campaign_mode.py  6ecd27f51949_added_window_index.py  748e1a963a72_add_is_authorative_flag_for_anns.py  80d56b18a9df_refactor_canvas_layout_remove_circular_.py  97f7875c837c_adding_timeseries_and_refactoring_tables.py  a1b2c3d4e5f6_add_pgvector_embeddings_table.py  a2b3c4d5e6f7_add_is_public_to_campaigns.py  b3c4d5e6f7a8_add_guide_markdown_to_settings.py  b5eab45ffd41_add_controls_panel_to_canvas_layouts.py  b7c9d2e4f6a8_add_embedding_year_to_campaign_settings.py  c4d5e6f7a8b9_add_sample_extent_meters_to_settings.py  c8d9e0f1a2b3_redesign_imagery_tables.py  cc5e7947d19c_initial_auth_and_campaigns_schema.py  cf49671afcb5_qualtiy_assurance_functionality.py  d5e6f7a8b9c0_add_viz_url_templates_to_stac_config.py  d7d4be498013_add_is_authoritative_to_annotations.py  d9f1e2a3b4c5_add_updated_at_to_annotations.py  e1f2a3b4c5d6_add_display_order_to_imagery_sources.py  e37d96fcbc0a_adding_imagery_configs.py  ecdf64d23d4e_rename_target_classes_to_labels.py  f1a2b3c4d5e6_add_titiler_stac_browser_columns.py  f214fa91bfb7_rename_tile_url_template_to_.py  f5283844a784_fix_annotation_task_constraint.py  f5bd1b96c424_add_unique_constraint_on_user_email.py  g2a3b4c5d6e7_add_cover_viz_params_to_stac_config.py  h1a2b3c4d5e6_add_mosaic_tables_and_search_query.py  i1a2b3c4d5e6_add_cloud_cover_to_mosaic_items.py  j1a2b3c4d5e6_add_registration_status_to_campaigns.py  k1a2b3c4d5e6_unique_annotation_per_user_per_task.py  l1a2b3c4d5e6_composite_gist_mosaic_items.py  m1a2b3c4d5e6_add_stac_item_to_mosaic_items.py  n1a2b3c4d5e6_add_flag_for_review_to_annotations.py  o1a2b3c4d5e6_add_max_native_zoom_to_basemaps.py
backend/src/: config.py  database.py  main.py  models.py  utils.py
backend/src/annotation/: ai_segmentation.py  constants.py  embeddings_service.py  models.py  router.py  schema.py  schemas.py  service.py
backend/src/auth/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/auth/providers/: __init__.py  base.py  firebase.py  local.py
backend/src/campaigns/: constants.py  dependancies.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/imagery/: models.py  router.py  schemas.py  service.py  stac_registration.py
backend/src/sampling_design/: router.py  schemas.py  service.py
backend/src/tiling/: router.py  schemas.py  stac_client.py  stac_reader.py  titiler_factory.py  token_manager.py
backend/src/timeseries/: constants.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_ai_segmentation.py  test_annotation_service.py  test_auth_service.py  test_campaign_dependencies.py  test_campaigns_service.py  test_config.py  test_embeddings_service.py  test_sampling_design.py  test_schemas_annotations.py  test_stac_registration.py  test_utils.py
db/: Dockerfile
docs/: architcture.md  ci.md  features.md  tile-serving.md  video-script.md
frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  Readme.md  default.conf  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/app/: App.tsx  app.css  main.tsx
frontend/e2e/: annotation-submission.spec.ts  review-mode.spec.ts  (+6 more)
nginx/: nginx.conf
scripts/: dev-restore-backup.sh
tiler/: Dockerfile  Dockerfile.dev  pyproject.toml
tiler/src/: config.py  database.py  main.py  models.py  reader.py  stac_client.py  stats.py  tiles.py
titiler_composite/: Dockerfile  README.md  docker-compose.yml  main.py  manifests.yaml  requirements.txt  test_map.html
(+284 files in other folders)
