[project]
name = "backend"
version = "0.1.0"
description = "A Tool for Annotating Geospatial Imagery from STAC Catalogs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "earthengine-api>=1.7.4",
    "fastapi>=0.124.4",
    "firebase-admin>=7.1.0",
    "geoalchemy2>=0.18.1",
    "geopandas>=1.0.1",
    "httpx>=0.28.0",
    "krippendorff>=0.6.1",
    "pandas>=2.3.3",
    "pgvector>=0.3.6",
    "psutil",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyproj>=3.7.0",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.21",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (no leftover prints)
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # do not perform function call in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F403"]
"tests/**" = ["T20"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:httplib2.*:", # Ignore as they are outside of our control
]
